cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_322.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/req.c:352: error: DEAD_STORE
  The value written to &nodes (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/apps/req.c:352:13: Write of unused value
350.               break;
351.           case OPT_NODES:
352.               nodes = 1;
                   ^
353.               break;
354.           case OPT_NOOUT:
